...
    Off("Open"),
}

enum class LabOverlayClick(val label: String) {
    Nothing("Nothing"),
    NextStep("Next step"),
    Dismiss("Dismiss"),
}

enum class LabTooltip(val label: String) {
    Custom("Custom"),
    Material3("Material3"),
}
...
